# pipeline_dvc

./: README.md  dvc.yaml  params.yaml  pyproject.toml
pipeline/: config.yaml
pipeline/data/: .gitignore
pipeline/scripts/: reader.py  writer.py
